@startuml total-fitness-tracker

class Meal {
  +id: string
  +title: string
  +date: datetime
  +created_at: datetime
  +updated_at: datetime
}

class Food {
  +id: string
  +name: string
  +unit: string
  +calories: integer
  +created_at: datetime
  +updated_at: datetime
}

class MealFood {
  +meal_id: string
  +food_id: string
  +quantity: integer
}

class PersonalInfo {
  +id: string
  +gender: string
  +weight: float
  +height: float
  +age: integer
  +date: datetime
  +activity_level_id: string
  +goal_id: string
  +created_at: datetime
  +updated_at: datetime
}

class ActivityLevel {
  +id: string
  +name: string
  +multiplier: float
  +created_at: datetime
  +updated_at: datetime
}

class Goal {
  +id: string
  +name: string
  +rate: float
  +created_at: datetime
  +updated_at: datetime
}

Meal "1" -- "0..*" MealFood : contains
Food "1" -- "0..*" MealFood : referenced by
PersonalInfo "1" -- "1" ActivityLevel : has
PersonalInfo "1" -- "1" Goal : has

@enduml
